[fix] #338 - 불변 리스트라 직접 정렬 안되는 문제를 가변 리스트로 변경해서 해결
[#338] fix: 불변 리스트라 직접 정렬 안되는 문제를 가변 리스트로 변경해서 해결 (#339)